fix css flicker

--- a/private/application/controllers/debug/css/style.css
+++ b/private/application/controllers/debug/css/style.css
@@ -2,7 +2,3 @@
 #cinderModule {
 	display:block;
 }
-
-#searchForm {
-	width:300px;
-}
