--- a/private/application/controllers/dragdrop/css/style.css
+++ b/private/application/controllers/dragdrop/css/style.css
@@ -1,4 +1,8 @@
 
+#cinderModule {
+	display:block;
+}
+
 .purpose-dragdrop {
 	border:2px dotted black;
 	padding:1em;
