--- a/private/application/controllers/error/css/style.css
+++ b/private/application/controllers/error/css/style.css
@@ -1,4 +1,8 @@
 
+#cinderModule {
+	display:block;
+}
+
 #errorPage {
 	text-align:center;
 }
