--- a/private/application/controllers/login/css/style.css
+++ b/private/application/controllers/login/css/style.css
@@ -1,4 +1,8 @@
 
+#cinderModule {
+	display:block;
+}
+
 body {
 	background-color:#000;
 }
