--- a/private/application/controllers/plugin/css/style.css
+++ b/private/application/controllers/plugin/css/style.css
@@ -1,4 +1,8 @@
 
+#cinderModule {
+	display:block;
+}
+
 .colourPreview {
 	display:inline-block;
 	width:200px;
