--- a/private/application/controllers/system/css/style.css
+++ b/private/application/controllers/system/css/style.css
@@ -43,10 +43,6 @@
 	margin-bottom:0;
 }
 
-.purpose-hidden {
-	display:none;
-}
-
 ul.toolbar {
 	display:inline-block;
 	list-style-type:none;
@@ -158,6 +154,7 @@ h1 {
 		}
 
 #cinderModule {
+	display:none;
 	width:100%;
 	height:100%;
 	margin:0;
